# agent-eval-pipeline

./: .gitignore  README.md  implementation_plan.md  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: agent-eval.yml
adapters/: __init__.py  adapter_factory.py  autogen_adapter.py  base.py  crewai_adapter.py  langchain_adapter.py  langgraph_adapter.py  odysseus_adapter.py  remote_adapter.py
dashboard/: __init__.py  api.py  log_stream.py
docs/: Agent_Eval_Pipeline_Report.md  ODYSSEUS_METRICS.md  create_metrics_doc.js
evals/: __init__.py  _env.py  base_evaluator.py  enterprise_cost.py  graph_memory.py  grounding_judge.py  hk_contagion.py  multi_agent.py  odysseus_metrics.py  odysseus_metrics_config.py  odysseus_metrics_evaluator.py  persona_consistency.py  pipeline_metrics.py  pipeline_metrics_config.py  pipeline_metrics_evaluator.py  rag_quality.py  reliability.py  safety.py  task_completion.py  tool_use.py  trajectory.py
evals/judge_prompts/: __init__.py  coordination_rubric.txt  persona_rubric.txt  planning_rubric.txt
harness/: __init__.py  eval_harness.py  run.py
registry/: __init__.py  agent_card.py  registry.py
schema/: __init__.py  tables.sql
scripts/: log_to_mlflow.py  promote_to_regression.py  register_all_agents.py  register_odysseus_agent.py  run_odysseus_eval.py
storage/: __init__.py  artifact_store.py  mlflow_logger.py  report_store.py
tasks/: full_suite.json  odysseus_suite.json  regression_suite.json  smoke_suite.json
tracer/: __init__.py  injection_middleware.py  trajectory_tracer.py
