[project]
name = "agent-eval-pipeline"
version = "1.0.0"
description = "Universal Agent Evaluation Pipeline based on CLEAR (2025) & MultiAgentBench (ACL 2025)"
requires-python = ">=3.10"

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "Windows"
root = "."
include = [
    "adapters",
    "dashboard",
    "evals",
    "harness",
    "registry",
    "schema",
    "storage",
    "tracer",
    "tasks",
    "scripts",
]
extraPaths = ["."]
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = "none"

[tool.pyre-check]
search_path = ["."]
source_directories = ["."]
